# Learn_JNI

./: gradle.properties  learn_jni.jks  settings.gradle
BankCardRecognition/: build.gradle
BankCardRecognition/src/androidTest/java/com/wintone/bankcard/: ExampleInstrumentedTest.java
BankCardRecognition/src/main/: AndroidManifest.xml
BankCardRecognition/src/main/java/com/wintone/bankcard/: MainActivity.java  TestActivity.java
BankCardRecognition/src/main/java/com/wintone/bankcard/camera/: CameraHelper.java  CameraListener.java
BankCardRecognition/src/main/java/com/wintone/bankcard/layout/: ViewfinderView.java
BankCardRecognition/src/main/java/com/wintone/bankcard/permissions/: EasyPermission.java  Utils.java
BankCardRecognition/src/main/res/layout/: activity_test.xml
BankCardRecognition/src/main/res/values/: colors.xml  strings.xml
BankCardRecognition/src/test/java/com/wintone/bankcard/: ExampleUnitTest.java
app/: build.gradle
app/release/: app-release.apk
app/src/androidTest/java/com/yizhitong/learnjni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-test.cpp
app/src/main/java/com/yizhitong/learnjni/: FaceDetectActivity.java  ImageProcessActivity.java  MainActivity.java
app/src/main/java/com/yizhitong/learnjni/facedetect/: FaceDetectBody.java
app/src/main/java/com/yizhitong/learnjni/file/: FileUtils.java
app/src/main/java/com/yizhitong/learnjni/permissions/: EasyPermission.java  Utils.java
app/src/main/res/layout/: activity_face_detect.xml  activity_image_process.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yizhitong/learnjni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
idcardlibrary/: build.gradle
idcardlibrary/src/androidTest/java/com/ym/idcard/reg/: ExampleInstrumentedTest.java
idcardlibrary/src/main/: AndroidManifest.xml
idcardlibrary/src/main/java/com/ym/idcard/reg/: CameraHelper.java  CameraListener.java  FileUtil.java  IDCard.java  IdCardActivity.java  ImageRotateUtil.java  MainActivity.java  NativeOcr.java  StringUtil.java
idcardlibrary/src/main/java/com/ym/idcard/reg/engine/: OcrEngine.java
idcardlibrary/src/main/java/com/ym/idcard/reg/layout/: ViewfinderView.java
idcardlibrary/src/main/java/com/ym/idcard/reg/permissions/: EasyPermission.java  Utils.java
idcardlibrary/src/main/java/com/ym/idcard/reg/widget/: ViewfinderView.java
idcardlibrary/src/main/res/layout/: activity_id_card.xml
idcardlibrary/src/main/res/values/: colors.xml  strings.xml
idcardlibrary/src/test/java/com/ym/idcard/reg/: ExampleUnitTest.java
opencv/java/src/org/opencv/core/: Core.java
opencv/java/src/org/opencv/objdetect/: CascadeClassifier.java
